--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "disco-explorer-old",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "node-static": "^0.7.9"
-  },
+  "dependencies": {},
   "devDependencies": {
     "lite-server": "^2.2.2",
     "typescript": "^2.0.10"
