--- a/bs-config.json
+++ b/bs-config.json
@@ -1,6 +1,6 @@
 {
   "open": "external",
-  "host": "disco-node.local",
+  "host": "localhost",
   "port": 8000,
   "server": {
     "baseDir": "./"
