--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "lite-server",
+    "server": "lite-server",
     "postinstall": "node_modules/typescript/bin/tsc -p ."
   },
   "author": "",
